--- a/index.html
+++ b/index.html
@@ -410,6 +410,8 @@
         </tr>
 
     </table>
+
+    <div style="margin-top:30px;"><a href="http://jamie-sefton.co.uk">Built by Jamie Sefton</a></div>
 </div>
 
 </body>
