--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 
         $(function(){
             //generate(1);
-            populate();
+            //populate();
         });
     </script>
 </head>
