--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Suduko Solver</title>
+    <title>Sudoko Solver</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
@@ -375,7 +375,7 @@
 <body>
 
 <div id="container">
-    <h1>Suduko Solver</h1>
+    <h1>Sudoko Solver</h1>
     <button onClick="populate();" class="btn btn-info">Populate</button>
     <button onClick="solveNext();" class="btn btn-primary">Solve Next</button>
     <button onClick="solveAll();" class="btn btn-success">Solve All</button>
